--- a/tests/input.bib
+++ b/tests/input.bib
@@ -10,6 +10,37 @@ abstract = {Light transport algorithms generate realistic images by simulating t
 note = {AAI9837162}
 }
 
+@inproceedings{10.1145/1661412.1618512,
+author = {Yuksel, Cem and Schaefer, Scott and Keyser, John},
+title = {Hair Meshes},
+year = {2009},
+isbn = {9781605588582},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/1661412.1618512},
+doi = {10.1145/1661412.1618512},
+abstract = {Despite the visual importance of hair and the attention paid to hair modeling in the
+graphics research, modeling realistic hair still remains a very challenging task that
+can be performed by very few artists. In this paper we present hair meshes, a new
+method for modeling hair that aims to bring hair modeling as close as possible to
+modeling polygonal surfaces. This new approach provides artists with direct control
+of the overall shape of the hair, giving them the ability to model the exact hair
+shape they desire. We use the hair mesh structure for modeling the hair volume with
+topological constraints that allow us to automatically and uniquely trace the path
+of individual hair strands through this volume. We also define a set of topological
+operations for creating hair meshes that maintain these constraints. Furthermore,
+we provide a method for hiding the volumetric structure of the hair mesh from the
+end user, thus allowing artists to concentrate on manipulating the outer surface of
+the hair as a polygonal surface. We explain and show examples of how hair meshes can
+be used to generate individual hair strands for a wide variety of realistic hair styles.},
+booktitle = {ACM SIGGRAPH Asia 2009 Papers},
+articleno = {166},
+numpages = {7},
+keywords = {hair modeling, volume modeling, hair mesh},
+location = {Yokohama, Japan},
+series = {SIGGRAPH Asia '09}
+}
+
 @article{hasselgren2020,
 author = {Hasselgren, Jon and Munkberg, J. and Salvi, Marco and Patney, A. and Lefohn, Aaron},
 year = {2020},
