add new test for grammar changes

--- a/tests/input.bib
+++ b/tests/input.bib
@@ -71,3 +71,17 @@ volume = {39},
 journal = {Computer Graphics Forum},
 doi = {10.1111/cgf.13919}
 }
+
+@article{Doslu_2016,
+	doi = {10.1007/s11192-016-1982-6},
+	url = {https://doi.org/10.1007/s11192-016-1982-6},
+	year = 2016,
+	month = {may},
+	publisher = {Springer Science and Business Media {LLC}},
+	volume = {108},
+	number = {2},
+	pages = {653--671},
+	author = {Metin Doslu and Haluk O. Bingol},
+	title = {Context sensitive article ranking with citation context analysis},
+	journal = {Scientometrics}
+}
